<resources>
    <string name="app_name">TradeGo</string>
    <string name="facebook_app_id">528996547286241</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="prompt_sort_order">Sort by...</string>
    <string name="category_type">Category</string>
    <string name="sort_by">Sort by</string>
    <string name="owner">Belongs to</string>
    <string name="owner_hint">This item belongs to...</string>
    <string name="back">Back</string>
    <string name="Logo">Tradégo</string>
    <string name="Description">It\'ll make you very very rich</string>
    <string name="login">Login</string>
    <string name="email">Sign Up With Email</string>
    <string name="terms">By continuing you indicate that you have read and agreed to the Terms of Service and Privacy Policy</string>
    <string name="skip">SKIP</string>
    <string name="friendImport">People you may know!</string>
    <string name="MoreInfo">Swipe right if you wish to add as a friend</string>
    <string name="skipAddItem">Next</string>
    <string name="price">Price</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alertSwipe">Please swipe right to add friends</string>
    <string name="tagline">Remember, these will be the people you share and sell items to.</string>


    <string name="action_settings">Settings</string>
    <string name="product_name">Product Name</string>
    <string name="txt_image_slider">Image Slideshow</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="time_out">Time Out</string>
    <string name="error_occured">Error Occurred</string>



</resources>
