<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="teamcool.tradego.Activities.FriendImportActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvAcquaintances"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="450dp">
        android:layout_height="match_parent"
        android:background="@color/colorBackground">
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/skip"
        android:id="@+id/textView4"
        android:onClick="skipActivity"
        android:layout_below="@+id/rvAcquaintances"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="42dp"
        android:layout_marginEnd="42dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friendImport"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MoreInfo"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
