<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="200dp"
    android:layout_gravity="center"
    android:background="#f3f8f1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/category_type"
        android:id="@+id/tvCategoryType"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:id="@+id/tvSortOrder"
        android:layout_below="@id/tvCategoryType"
        android:layout_alignLeft="@id/tvCategoryType"
        android:layout_alignStart="@id/tvCategoryType"
        android:layout_marginBottom="24dp"/>

    <Spinner
        android:id="@+id/spnrSortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/sort_array"
        android:prompt="@string/prompt_sort_order"
        android:layout_toRightOf="@id/tvCategoryType"
        android:layout_toEndOf="@id/tvCategoryType"
        android:layout_alignBaseline="@id/tvSortOrder"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <Spinner
        android:id="@+id/spnrCategoryType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/categories"
        android:layout_toRightOf="@id/tvCategoryType"
        android:layout_toEndOf="@id/tvCategoryType"
        android:layout_alignBaseline="@id/tvCategoryType">
    </Spinner>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="Submit"
        android:id="@+id/btnSubmitFilter"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:minHeight="48dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tvSortOrder"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/back"
        android:id="@+id/btnFilterBack"
        android:layout_toLeftOf="@id/btnSubmitFilter"
        android:clickable="true"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:minWidth="65dp"
        android:layout_below="@id/tvSortOrder"/>

</RelativeLayout>